fix - height issue on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,9 @@
 
 body {
 	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
 	color: rgb(var(--foreground-rgb));
 	background: linear-gradient(
 			to bottom,
